# annotator

./: AKOUMA Annotato.spec  AKOUMA-Annotator.spec  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.rst  labelImg.py  labelImg.spec  pyrightconfig.json  resources.qrc  setup.cfg  setup.py
core/: __init__.py  annotation_manager.py  application.py  config_manager.py  project_manager.py
libs/: async_image_loader.py  canvas.py  classManagerDialog.py  coco_io.py  constants.py  dataset_validator.py  export_dialog.py  image_cache.py  labelFile.py  memory_manager.py  navigation_manager.py  optimized_canvas.py  preferences_dialog.py  responsive_ui.py  shortcut_manager.py  shortcuts_dialog.py  start_screen.py  theme_manager.py  yolo_io.py
requirements/: requirements-windows.txt
tests/: test_core_components.py  test_image_cache.py  test_theme_manager.py  test_yolo.py
